syntax = "proto3";
package car;

import "common.proto";

message CarEntity {
    string id = 1;
    Car car = 2;
}

enum CarStatus {
  CS_NOT_SPECIFIED = 0;
  LOCKED = 1;
  UNLOCKING = 2;
  UNLOCKED = 3;
  LOCKING = 4;
}

message Driver {
  int64 id = 1;
  string avatar_url = 2;
}

message Position {
  double latitude = 1;
  double longitude = 2;
}

message Car {
  CarStatus status = 1;
  Driver driver = 2;
  Position position = 3;
  string trip_id = 4;
  float power = 5;
  string plate_num = 6;
}

message GetCarRequest {
  string id = 1;
}

message GetCarResponse{
  common.BaseResponse base_resp = 1;
  Car car = 2;
}

message GetCarsRequest{
}

message GetCarsResponse{
  common.BaseResponse base_resp = 1;
  repeated CarEntity cars = 2;
}